@@ -67,8 +67,12 @@ new names should be listed for reference.
 
 7.24
 ----
+include/raytrace librt
+        db_full_path_list_add(), db_free_full_path_list() [deprecated 7.24]
+        db_search_formplan(), db_search_freeplan(), db_search_full_paths() [deprecated 7.24]
+        db_search_unique_objects(), struct db_full_path_list [deprecated 7.24]
 src/irprep
-       all_sf, firpass, ir-X, irdisp, pictx, secpass, shapefact, showterm [deprecated 7.24]
+        all_sf, firpass, ir-X, irdisp, pictx, secpass, shapefact, showterm [deprecated 7.24]
 include/raytrace.h librt
         RT_DBHASH and RT_DBNHASH [deprecation 7.24]
 
